# vektal

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .rules  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CUsersHpDocumentsShopify Scraping ScriptBUG_FIXES_2026-03-09.md  CUsersHpDocumentsShopify Scraping Scripttmp_proposals.json  Dockerfile.backend  Dockerfile.frontend  FAILURE_JOURNEY.md  GEMINI.md  HARNESS_GAPS.md  LEARNINGS.md  NEO4J_QUERY_FIXES_2026-03-09.md  README.md  STANDARDS.md  TASK_14_VERIFICATION_REPORT.md  TASK_EXECUTION_IMPLEMENTATION_SUMMARY.md  claudesplan.md  demo_framework.py  demo_graph_benefits.py  demo_graph_clean.py  design-tokens-v2.json  docker-compose.secrets.yml  docker-compose.yml  find_and_deploy.sh  git_push_instructions.txt  gunicorn_config.py  hero-demo.html  next tasks.md  playwright.config.ts  prove_graph.py  pyproject.toml  requirements-dev.txt  requirements.txt  risk-policy.json  (+8 more)
.claude/: AUTOMATIC_VERIFICATION_ENABLED.md  HOOKS_GUIDE.md  MVP_IMPLEMENTATION_COMPLETE.md  PROGRESSIVE_VERIFICATION_QUICKSTART.md  agnix.json  gsd-file-manifest.json  learnings.md  settings.json  settings.local.json
.codex/: SESSION_PRIMER_TEMPLATE.md  learnings.md  preToolUseHook.sh  settings.json
.commands/: README.md  agents.md
.gemini/: SESSION_PRIMER_TEMPLATE.md  learnings.md  preToolUseHook.sh  preToolUseHook.sh.bak  settings.json
.investigation/: sentry-resolution-summary.md  sentry-silence-2026-03-09.json  sentry-silence-forensic-report.md  sentry-triage-report.md  sentry-verification-2026-03-09.txt
cli/: main.py
(+2354 files in other folders)
